# ntok

./: .gitignore  README.md  install-client.sh  install-mac-app.sh  install-mac-client.sh  install.sh  pyproject.toml  start-client.sh
docs/: fully-hands-off-macos-launchd.md  macOS-seat-client.md
macos/launchd/: com.user.ntok.client-daemon.plist
ntok/: __init__.py  audio.py  cli.py  client.py  commit.py  config.py  daemon.py  feedback.py  inject.py  stream.py  textutil.py  transcribe.py
ntok/net/: client.py  client_daemon.py  protocol.py  seat.py  server.py
systemd/: ntok-client.service  ntok-server.service  ntokd.service  ydotoold.service
tests/: _fixture.py  test_client_daemon.py  test_commit_engine.py  test_daemon_state.py  test_flow_punctuation.py  test_net_acceptance.py  test_net_server.py  test_protocol.py  test_session.py  test_streaming_acceptance.py  test_textutil.py
