[project]
name = "ntok"
version = "0.1.0"
description = "Warm-daemon local Whisper dictation for Linux/Wayland (COSMIC, GNOME, sway, ...)"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
server = [
    # 1.1+ adds the large-v3-turbo model id (optional low-latency stream model).
    "faster-whisper>=1.1.0",
    # CUDA libs for CTranslate2 GPU inference (bundled, no system CUDA needed)
    "nvidia-cublas-cu12",
    "nvidia-cudnn-cu12>=9.0",
]
dev = [
    "pytest>=7",
    "soundfile>=0.12",  # read/write the acceptance-test WAV fixture
]
# For [model] backend = "openai" (max accuracy, sends audio to API):
#   pip install openai
#   export OPENAI_API_KEY=...
# For backend = "grok" (xAI Grok STT - low latency real-time, recommended):
#   pip install requests
#   export XAI_API_KEY=sk-...          # or put xai_key / grok_key under [net] in config.toml
api = [
    "openai>=1.0",
    "requests>=2.0",
]

[project.scripts]
ntok = "ntok.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["ntok*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# The GPU acceptance test is slow and needs a real model; opt in with -m acceptance.
markers = ["acceptance: end-to-end test that loads a real Whisper model"]
addopts = "-m 'not acceptance'"
